trunk/Archive2/e7/121f9c2f8ab762/output
main.cpp:7:15: error: 'i' is a private member of 'A<double>'
        i = a.i;
              ^
main.cpp:17:8: note: in instantiation of function template specialization 'A<int>::copy_i_from<double>' requested here
    ai.copy_i_from(ad);
       ^
main.cpp:3:9: note: implicitly declared private here
    int i;
        ^
1 error generated.
